--- a/client/src/main.html
+++ b/client/src/main.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pneumonia Classifier</title>
+	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
 	<link rel="stylesheet" href="../style/main.css">
 </head>
 <body>
@@ -37,6 +37,7 @@
 	<div class='footer'>
 	
 	</div>
+	<script src="../js/load_model.js"></script>
 	<script src="../js/main.js"></script>
 </body>
 </html>
