--- a/client/src/main.html
+++ b/client/src/main.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class='header'>
-		HỆ THỐNG CHUẨN ĐOÁN BỆNH VIÊM PHỔI 
+		HỆ THỐNG CHẨN ĐOÁN BỆNH VIÊM PHỔI 
 	</div>
 	<div class='content'>
 	
